<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/contact_NameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_NameTextView"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/contact_NameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_NameEditText"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/contact_EmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_EmailTextView"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/contact_EmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_EmailEditText"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/contact_MessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_MessageTextView"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/contact_MessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_MessageEditText"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_SendEmailButton"
        android:layout_margin="10dp"
        android:textColor="@android:color/black"/>

</LinearLayout>